# session-info2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.rst  README.md  biome.jsonc  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  index.ipynb  index.md  notebook1.ipynb  requirements-sbc.txt
docs/_static/: custom.css
src/session_info2/: __init__.py  __main__.py  _dists.py  _pu.py  _repr.py  _ttl_cache.py  _widget.py
stubs/: ipywidgets.pyi  pyperclip.pyi
stubs/testing/common/: database.pyi
tests/: conftest.py  test_subprocess.py  test_synthetic.py  test_utils.py
tests/data/: basic.py  dep.py
tests/data/basic-1.0.dist-info/: METADATA
tests/data/dep-0.3.dist-info/: METADATA
tests/data/mis_match/: __init__.py
tests/data/mismatch-1.1.dist-info/: METADATA  top_level.txt
tests/data/namespace/: package.py
tests/data/namespace.package-2.2.1.dist-info/: METADATA
